style.css
body{
	background: white;
	color: black;
	font-size: 16px;
	font-family: Ariel, Helvetica, sans-serif;
	padding: 0px;
	margin:0px;
}

.nav{
	background: cadetblue;
	color: white;
}

.nav ul{
	padding:0px;
	margin: 0px;
	/*text-decoration: none;*/
	list-style-type: none;
}

.nav ul li{
	padding:16px;
	text-align: center;
	font-size: 1.2em;
	border-bottom: 1px solid black;
	transition: background-color 0.3s;
}

.nav ul li:hover{
 background-color: black;
}

.image-area{
	background-image:url('images/background.png');
	background-color: black;
	background-position: center center;
	background-size: cover;
	padding-top: 200px;
	padding-bottom: 200px;
}

.centered-container{
	text-align: center;
	max-width: 1020px;
	margin: 0px auto;
	padding: 0px 16px;
}
.image-text{
	
	background-color: black;
	color: white;
	font-size: 2.5 em;
}

.intro-text{
	color: grey;
	text-align: center;
	font-size: 1.5em;
	padding-top: 50px;
	padding-bottom: 50px;
}

.single-service{
	text-align: center;
	margin-bottom: 32px;
}

.single-service p{
	padding:0px 16px;
}

@media screen and (min-width: 700px)
{
	/* this rules only apply when the screen is 700px or more*/
	.nav ul{
		text-align:right; 
	}

	.nav ul li{
		display: inline-block;;
		border-left: 1px solid black;
		border-bottom: 0px;
		text-align: left;
	}

	.single-service{
		width: 50%;
		float: left;
	}
}

